<resources>
    <string name="app_name">Annonce</string>
    <string name="title_activity_photo">photo</string>
    <string name="share_your_experience_with_other_users">Want to say something?</string>
    <string name="add_a_comment_picture">Add a comment picture</string>
    <string name="did_it_satisfied_your_expectations_is_there_anything_worth_sharing_about">Satisfied your expectations? Something unclear?</string>
    <string name="send">Send</string>
    <string name="seller_profile_pic">SELLER PROFILE PIC</string>
    <string name="default_seller_phone">phone number</string>
    <string name="default_seller_email">email</string>
    <string name="default_seller_name">name</string>
    <string name="price_row_title">Price</string>
    <string name="default_room_amount">default room amount</string>
    <string name="default_price">default price</string>
    <string name="default_characteristics">default characteristics</string>
    <string name="characteristics_row_title">Characteristics</string>
    <string name="default_date">default date</string>
    <string name="published_row_title">Published</string>
    <string name="default_code">default code</string>
    <string name="postal_code_row_title">Postal Code</string>
    <string name="default_city">default city</string>
    <string name="city_row_title">City</string>
    <string name="rooms_row_title">Rooms</string>
    <string name="description_row_title">description</string>
    <string name="title_row_title">title</string>
    <string name="sold_by_row_title">Sold by :</string>
    <string name="property_images">Property images</string>
    <string name="be_the_first_to_comment">Be the first to comment!</string>
    <string name="none">(none)</string>
    <string name="comments">Comments</string>
    <string name="default_comment_author">Author</string>
    <string name="default_comment_profile_picture">profile picture</string>
    <string name="default_comment_comment_content">comment content</string>
    <string name="default_comment_date">date</string>
    <string name="default_title">TITLE</string>
    <string name="annonce_picture_default_content">Annonce picture</string>
    <string name="open_annonce_button_content">open annonce</string>
</resources>
